# flashcards

./: .gitignore  README.md  TEST_DATA_README.md  app.py  chinese_review.html  falling-game.js  flashcard-game.js  login.html  matching-game.js  multiple-choice-game.js  pyproject.toml  run_tests.sh  script.js  setup_env.sh  styles.css  test_app.py  test_flashcards.csv  test_flashcards_pinyin_only.csv  test_flashcards_zhuyin_only.csv
